--- a/app.json
+++ b/app.json
@@ -1,5 +1,5 @@
 {
-  "name": "Adarsh-",
+  "name": "Adersh-",
   "description": "A Pyrogram Telegram bot to Stream Telegram files to web. @adarshgoel",
   "keywords": [
       "telegram",
